# HDP

./: .gitignore  .readthedocs.yaml  Demo.ipynb  Dockerfile  README.md  environment.yml  heatwave_metrics.py  heatwave_threshold.py  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml  release.yml  unit_tests.yml
docs/: api.rst  conf.py  dev_guide.rst  examples.rst  index.rst  install.rst  overview.rst  requirements.txt  testing.rst  user.rst
docs/assets/: method_figures.pptx
docs/example_cmip_workflow/: run_cmip_workflow.py
docs/joss/: paper.bib  paper.md
docs/paper/: paper.md
docs/sample_data/: sample.py
hdp/: __init__.py  cli.py  hdp.py  heat_stats.py  hw_dataset.py  measure.py  metric.py  plotting_functions.py  sample.py  threshold.py  utils.py
hdp/graphics/: figure.py  hdp.mplstyle
hdp/tests/: test_heatwave_duration_with_breaks.py  test_heatwave_frequency_with_breaks.py  test_utils.py  test_workflow.py
prototyping/: Prototyping.ipynb
scripts/: environment.yml  heat_metrics.py  heatwave_metrics.py  heatwave_threshold.py
src/: hdp.py  heat_core.py  heat_stats.py
src/tests/: test_heatwave_duration.py  test_heatwave_frequency.py  test_index_heatwaves.py
test/: Benchmarking.py  Prototyping.ipynb  QuantileBenchmarks.csv  SampleInputTemperatures.nc  SampleOutputThreshold.nc  TestDataOverview.ipynb  tests.py
tests/: test_index_heatwaves.py
