[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "HDP"
version = "0.0.1"
description = "Heatwave Diagnostics Package (HDP) for computing heatwave metrics over gridded timeseries data."
authors = [
  { name = "Cameron Cummins", email = "cameron.cummins@utexas.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12.3"
dependencies = [
  "xarray >= 2024.3.0",
  "numpy >= 1.26.4",
  "numba >= 0.59.1",
]
keywords = ["HDP", "heat", "heatwave", "heatwave diagnostics package", "climate", "climate model", "timeseries", "heatwave metrics", "diagnostics"]

[project.urls]
Homepage = "https://github.com/AgentOxygen/heatwave_diagnostics_package"
Issues = "https://github.com/AgentOxygen/heatwave_diagnostics_package"

[tool.setuptools]
packages = ["hdp"]